# SCSO-GWO-hybrid-swarm-optimization

./: AS4_NEVO.docx  GWO-SCSO Hybrid.ipynb  README.md  README_miner_test.txt  config_explanation.md  custom_reporter.py  data.py  game.py  game_simulation.py  hybrid.py  hybrid_1.py  hybrid_2.py  hybrid_3.py  hybrid_gwoscso_albp.py  hybrid_v3.py  main-quick.py  main.py  main_IBEA.py  main_NSGA2.py  main_albp_EpsNGA2.py  main_albp_IBEA.py  main_albp_NSGA2.py  main_albp_SPEA2.py  main_albp_hybrid.py  main_hybrid.py  math.ipynb  miner.py  miner_harness.py  miner_harness2.py  miner_harness3.py  miner_neat2.py  miner_neat2_asteroid.py  miner_neat2_both.py  miner_neat2_continue.py  miner_neat2_radar.py  miner_neat2_radar_3asteroid.py  neat_config.txt  pareto_utils.py  problems.py  pyproject.toml  (+4 more)
assignment-2/: main.py  requirements.txt
assignment-3/: README.md  main_SPEA2.py  problem_MO.py  requirements.txt  visualization.py
input_functions/: _1_radar.py  _2_1mineral_1asteroid_info.py  _3_simple.py  _4_full_radar.py
tests/: test_calculate_relative_angle.py
