[project]
name = "scso-gwo-hybrid-swarm-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mealpy>=3.0.1",
    "neat-python>=0.92",
    "numpy<2",
    "opfunu>=1.0.4",
    "pydantic>=2.11.4",
    "pygame>=2.6.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
]
